[package]
name = "smdton"
version = "0.1.3"
edition = "2021"
authors = ["smwasm@outlook.com"]
repository = "https://github.com/smwasm/smdton.git"
license = "Apache-2.0"
description = "Data Tree Object Notation" 

[dependencies]
json = "0.12.4"
base64 = "0.22.1"

[lib]
crate-type = ["rlib", "cdylib"]
